fix background color overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Space Mono', sans-serif;
   font-size: 16px;
-  line-height: 1;
+  line-height: 1.5;
   background-color: grey;
 }
 
@@ -42,44 +42,43 @@ a {
 
 .time-block {
   text-align: center;
-  border-radius: 15px;
+  outline: 1px solid black;
 }
 
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid black;
 }
 
 .hour {
   color: white;
   outline: 1px solid #000000;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
 }
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: black;
 }
 
 .present {
   background-color: #ff6961;
-  color: white;
+  color: black;
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: black;
 }
 
-.saveBtn {
-  border-left: 1px solid black;
+.save-button {
+  outline: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06aed5;
-  color: white;
 }
 
-.saveBtn i:hover {
+.save-button i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
